# velogames

./: .flake8  .gitignore  README.md  benelux.toml  challenge.toml  mypy.ini  pyproject.toml  scrapper.py  velogame.toml
.github/workflows/: checks.yml  compute.yml  lint.yml
history/: britain_2021.csv  challenge_2022.csv  down_under_2023.csv  giro-donne-2022.csv  giro_2020.csv  giro_2021.csv  giro_2022.csv  itzulia_2023.csv  itzulia_women_2023.csv  ladies-tour-norway_2021.csv  nice_2022.csv  oman_2023.csv  poland_2021.csv  portugal_2022.csv  romandie-feminin-2022.csv  romandie_2022.csv  romandie_2023.csv  san_juan_2023.csv  scandinavia_2022.csv  suisse_2021.csv  tdf_2021.csv  tirreno_2023.csv  valencia_2023.csv  vuelta_2020.csv
history/algarve/: 2023.csv  2024.csv  2025.csv
history/alpes-maritimes/: 2025.csv
history/alula/: 2025.csv
history/andalucia/: 2023.csv  2024.csv  2025.csv
history/benelux/: 2021.csv  2023.csv  2024.csv
history/besseges/: 2024.csv  2025.csv
history/britain/: 2022.csv  2023.csv  2024.csv
history/britain-women/: 2024.csv  2025.csv
history/burgos/: 2023.csv  2024.csv  2025.csv
history/catalunya/: 2023.csv  2024.csv  2025.csv
history/dauphine/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv
history/down-under/: 2024.csv  2025.csv
history/giro/: 2020.csv  2021.csv  2023.csv  2024.csv  2025.csv
history/giro-donne/: 2021.csv  2023.csv  2024.csv  2025.csv
history/gran-camino/: 2024.csv  2025.csv
history/itzulia/: 2021.csv  2022.csv  2024.csv  2025.csv
history/itzulia-women/: 2024.csv  2025.csv
history/london/: 2023.csv  2024.csv
history/oman/: 2024.csv
history/paris-nice/: 2020.csv  2021.csv  2023.csv  2024.csv  2025.csv
history/poland/: 2022.csv  2023.csv  2024.csv
history/portugal/: 2020.csv  2021.csv  2023.csv
history/provence/: 2024.csv  2025.csv
history/romandie/: 2021.csv  2024.csv  2025.csv
history/romandie-feminin/: 2023.csv  2024.csv
history/scandinavia/: 2023.csv
history/simac/: 2021.csv  2022.csv  2023.csv
history/suisse/: 2022.csv  2023.csv  2024.csv
history/suisse-women/: 2023.csv  2024.csv  2025.csv
history/tirreno-adriatico/: 2021.csv  2022.csv  2024.csv  2025.csv
history/tour/: 2020.csv  2022.csv  2023.csv  2024.csv  2025.csv
history/tour-femmes/: 2022.csv  2023.csv  2024.csv
history/uae/: 2023.csv  2024.csv  2025.csv
history/valencia/: 2024.csv  2025.csv
history/vuelta/: 2021.csv  2022.csv  2023.csv  2024.csv
history/vuelta-feminina/: 2021.csv  2023.csv  2024.csv  2025.csv
test/: test_velogames.py
velogames/: computer.py  form.py  main.py  rider.py  scrapper.py
