[tool.poetry]
name = "velogames"
version = "0.1.0"
description = ""
authors = ["jeremad <jeremy.tellaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
numpy = "1.26.2"
pandas = "2.1.3"
Pyomo = "6.6.2"
tomlkit = "0.12.3"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
oauth2client = "^4.1.3"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "23.11.0"
flake8 = "6.1.0"
mypy = "1.7.0"
types-requests = "^2.31.0.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"
isort = "5.12.0"
types-httplib2 = "^0.22.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrap = 'velogames.main:scrap'
compute = 'velogames.main:main'
form = 'velogames.main:create_form'
