[tool.poetry]
name = "velogames"
version = "0.1.0"
description = ""
authors = ["jeremad <jeremy.tellaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
numpy = "1.26.4"
pandas = "2.2.2"
Pyomo = "6.7.3"
tomlkit = "0.12.5"
google-api-python-client = "^2.134.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
oauth2client = "^4.1.3"
requests-oauthlib = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "24.4.2"
flake8 = "7.1.0"
mypy = "1.10.1"
types-requests = "^2.32.0.0"
pytest = "^8.2.1"
pytest-cov = "5.0.0"
isort = "5.13.2"
types-httplib2 = "^0.22.0.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrap = 'velogames.main:scrap'
compute = 'velogames.main:main'
form = 'velogames.main:create_form'

[tool.flake8]
max-line-length=200

[tool.mypy]
files = 'velogames/*.py, test/*.py'
allow_untyped_decorators = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyomo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true
